2002-07-02  Peteris Krisjanis <pecisk@inbox.lv>

	* configure.in: (ALL_LINGUAS) added Latvian (lv) support.

2002-06-29  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.mime:

	Change extension for C++ headers from "hp" to "hpp".

2002-06-28  Damon Chaplin  <damon@ximian.com>

	* gnome-vfs.keys.in: changed default action for text/html to
	application. We're doing this as nautilus 2.0 doesn't have a decent
	html component and it currently displays it as ascii text (bad!).
	Unfortunately this change will also affect nautilus 1.4 users, who
	may prefer the mozilla component. They'll have to change their default
	view themselves. Fixes bug #81615. 

2002-06-26  Jakub Steiner <jimmac@ximian.com>

	* icons/Makefile.am: added i-web and i-network
	* icons/i-network.png: 
	* icons/i-web.png: hadess' request

2002-06-26  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am: added 2 files from ximian-south by jimmac
	* icons/i-ftp.png: added
	* icons/i-nfs.png: updated
	* icons/i-smb.png: added

2002-06-19  Jakub Steiner <jimmac@ximian.com>

	* icons/gnome-application-vnd.sun.xml.calc.png:
	* icons/gnome-application-vnd.sun.xml.impress.png:
	* icons/gnome-application-vnd.sun.xml.writer.png: update labels

2002-06-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:

	Nasty hack to allow XMMS and FreeAmp to only handle
	MP3 files over http: (not playlists).

	Patch from Ben Liblit.

2002-06-17  Yanko Kaneti  <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-12  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:

	Change binary name to gnome-sound-recorder
	
2002-06-12  Jakub Steiner <jimmac@ximian.com>

	* icons/gnome-application-x-abiword.png: forgot to update this
	  one too

2002-06-12  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Release 2.0.0.

2002-06-11  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in:
